# naoraamat

./: .gitignore  compose.yaml  readme.md
backend/: Dockerfile  Pipfile  backend.Dockerfile  data.json  gdrive_structure.json  gid_path_scale.txt  pyproject.toml  requirements.txt
backend/app/: main.py
backend/certs/: seltsi-naoraamat-a62787628fe0.json
backend/mock_processes/: face_alignment.py  face_clustering.py  facedata.py  finding_neighbours.py  finding_neighbours_whispers.py  mock_db.py  preprocessing.py  testime.py  unpickler.py
backend/scripts/: localdrive2elastic.py  script.py  siseveeb2elastic.py
backend/utils/: EShelper.py  flow.py  gdrive_integration.py  image_helper.py  scan_known_faces_to_elastic.py  scan_unknown.py  seltsi_piltide_scraper.py
database/: elastic.Dockerfile  elasticsearch.yml  kibana.Dockerfile  kibana.yml
frontend/: Dockerfile  package.json
frontend/seltsi-front/: README.md  angular.json  package-lock.json  package.json
frontend/seltsi-front/src/: index.html
frontend/seltsi-front/src/app/: app.component.spec.ts  app.component.ts
frontend/src/: App.css  App.tsx  main.tsx  store.tsx
frontend/src/components/: PhotoCard.tsx  PhotoGrid.tsx
frontend/src/features/photoSearch/: PhotoSearchPage.css  PhotoSearchPage.tsx  photoSearchSlice.tsx
frontend/src/services/: api.d.ts  api.js
frontend/src/types/: types.ts
